# projek

./: CMakeLists.txt  FrameTabel.h  GAMBARASCI.txt  MasterAdminn.c  Menu.h  MenuTabel.txt  Penumpang.h  PesanTiket.h  login.h  main.c  pemesanantiket.h
Kendaraan/: createKendaraan.h  deleteKendaraan.h  menuKendaraan.h  readKendaraan.h  updateKendaraan.h
Laporan-Manager/: Laporan-Bulanan.h  Laporan.h  SortirA-Z.h  laporan.h  readtransaksi.h
Pemesanan/: Pesantiket.h
Rute/: createRute.h  deleteRute.h  readRute.h  rute.h  updateRute.h
Tiket/: TransaksiTiket.h  createTiket.h  readpenumpang.h
jadwal/: createjadwal.h  deletejadwal.h  menujadwal.h  readjadwal.h  updatejadwal.h
kategori/: create.h  createkategori.h  delete.h  deletekategori.h  kategori.h  menukategori.h  read.h  readkategori.h  update.h  updatekategori.h
pembatalan/: createpembatalan.h  deletepembatalan.h  pembatalan.h  pengembaliantiket.h  readpembatalan.h  readtiket.h
penumpang/: Penumpang.h  createpenumpang.h  deletepenumpang.h  readpenumpang.h  updatepenumpang.h
rute/: createrute.h  deleterute.h  menurute.h  readrute.h  updaterute.h
superadmin/: KelolaStaff.h  create.h  delete.h  read.h  update.h
